--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
                     <div class="toast-header">
                         <img src="help.png" class="bd-placeholder-img rounded me-2" width="20" />
                         <strong class="me-auto">Location update {{geolocation.error}}</strong>
-                        <small class="text-muted">{{speed}}</small>
+                        <small class="text-muted">{{geolocation.speed}}</small>
                         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                     </div>
                     <div class="toast-body">
